--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+# Python virtual environment
+.venv/
 
-# Ignore sensitive token file
+# Byte-code files
+__pycache__/
+*.pyc
+
+# Logs
+*.log
+
+# Data files
+*.csv
+*.json
+!marcas_y_sinonimos.json # Do not ignore this specific JSON file
+
+# Executables
+chromedriver.exe
+
+# Output directories
+outputs/
+model_pages/
+extractores/results_json/
+extractores/results_txt/
+
+# Sensitive files
 gmail_sender/token.json
+gmail_sender/credentials.json
